fixed padding on mobile

--- a/thinkinwordsstyle.css
+++ b/thinkinwordsstyle.css
@@ -93,7 +93,6 @@ div.LSC{
 	width:50%;
 	padding-left: 30px;
 	top: calc(40% + 10px);
-	padding-top: 0vh;
 	padding-bottom: 70px;
 	background-color: #FAFAFA;
 }
@@ -283,7 +282,6 @@ td{
 	}
 	div.LSC{
 		top: 20%;
-		padding-top: 10vh;
 		padding-bottom: 100px;
 	}
 	div.backgroundLeft{
@@ -317,7 +315,6 @@ td{
 	div.LSC{
 		width:100%;
 		top: 10%;
-		padding-top: 10vh;
 		padding-bottom: 100px;
 	}
 	p.tiwHeading{
